Real versión of my bitstarter page

--- a/index.html
+++ b/index.html
@@ -201,7 +201,7 @@
         <div class="span5 copy">
           <p>
             The zombies are being organized, we have to join forces to exterminate them, so I need your help.
-            With your colaboraciñon we will create a zombie repellent, first we protect ourselves and when we are safely modify the formula for the spray to attack them and save humanity.
+            With your colaboration we will create a zombie repellent, first we protect ourselves and when we are safely modify the formula for the spray to attack them and save humanity.
           </p>
         </div>
       </div>    
